--- a/style.css
+++ b/style.css
@@ -49,7 +49,17 @@
   transform: scale(1.05);
   cursor: pointer;
 }
-
+.book button {
+  padding: 0.3rem 0.8rem;
+  margin-top: 0.5rem;
+  background: transparent;
+  border: 1px solid #fdf4ff;
+  cursor: pointer;
+  box-shadow: 2px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.book button:hover {
+  border: 1px solid #f5d0fe;
+}
 .btn-container {
   display: flex;
   justify-content: center;
