--- a/style.css
+++ b/style.css
@@ -52,10 +52,9 @@
 .book button {
   padding: 0.3rem 0.8rem;
   margin-top: 0.5rem;
-  background: transparent;
+
   border: 1px solid #fdf4ff;
   cursor: pointer;
-  box-shadow: 2px 10px 10px rgba(0, 0, 0, 0.2);
 }
 .book button:hover {
   border: 1px solid #f5d0fe;
@@ -125,4 +124,16 @@ input[type="checkbox"] {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.read {
+  background: #86efac;
+}
+
+.notread {
+  background: #fca5a5;
+}
+
+.delete {
+  background: transparent;
 }
